hy_qoz_5e-3.err
  File "/u/zjian1/ASTZ/test_transformer_ppl.py", line 37
    if 
       ^
SyntaxError: invalid syntax
